force-app/main/default/objects/QuestionResult__c/QuestionResult__c.object-meta.xml
<CustomObject>
    <label>QuestionResult</label>
    <nameField>
        <displayFormat>QuestionResult-{00000}</displayFormat>
        <label>QuestionResult Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
	<pluralLabel>QuestionResults</pluralLabel>
</CustomObject>