force-app/main/default/objects/QuestionResult__c/fields/LocalId__c.field-meta.xml
<CustomField>
    <fullName>LocalId__c</fullName>
    <label>LocalId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>