force-app/main/default/objects/QuestionResult__c/fields/QuestionId__c.field-meta.xml
<CustomField>
    <fullName>QuestionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QuestionId</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>QuestionResult</relationshipLabel>
    <relationshipName>QuestionResults</relationshipName>
    <type>Lookup</type>
</CustomField>