force-app/main/default/objects/QuestionResult__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>QuestionId__c</columns>
    <columns>LocalId__c</columns>
    <columns>IsSuccess__c</columns>
    <columns>Result__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>